<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_my_second_logo_foreground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/login_stmt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="15sp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/register_stmt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>